--- a/TCC-EngenhariaComputacao-Totem/src/static/css/style.css
+++ b/TCC-EngenhariaComputacao-Totem/src/static/css/style.css
@@ -7,28 +7,77 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: center;    
+    justify-content: center;
+    padding-top: 250px;
+
 }
 
-h1{
-    color:aliceblue;
+.footer {
+  margin-top: 410px;
+  padding: 30px;
+  color: white;
+  display: flex;
+  font-size: large;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer-cpf {
+  margin-top: 350px;
+  padding: 20px;
+  color: white;
+  display: flex;
+  font-size: large;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer-senha {
+  margin-top: 350px;
+  padding: 20px;
+  color: white;
+  display: flex;
+  font-size: large;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer-reconhecimento {
+  margin-top: 150px;
+  padding: 20px;
+  color: white;
+  display: flex;
+  font-size: large;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer a {
+  text-decoration: none;
+  color: white;
+}
+
+.test {
+  min-height: 100vh;
 }
 
 form{
     display: flex;
 }
 
-
-.flashes {
+.flashes-reconhecido {
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 100px;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: green;
+    padding: 30px;
+    border-radius: 8px;
+    font-size: 24px;
+    font-weight: 700;
     list-style-type: none;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ddd;
-    background-color: #f9f9f9;
-}
-
-.flashes li {
-    color: #d9534f;
 }
 
 .container {
@@ -40,14 +89,47 @@ form{
 
 .text-box {
     position: absolute;
-    bottom: 10px;
+    bottom: 1px;
     left: 50%;
     transform: translateX(-50%);
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
-    padding: 15px;
+    padding: 20px;
+    font-size: 24px;
     border-radius: 8px;
     text-align: center;
+}
+
+.waiting-message {
+    color: white;
+}
+
+.container-message {
+    position: relative;
+    width: 1100px;
+    height: auto;
+    margin: 0 auto;
+}
+
+.message-box {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translate(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: red;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.message {
+    list-style: none;
+    padding: 10px;
+    border: 1px;
+    border-radius: 5px;
 }
 
 #voltar {
@@ -57,4 +139,17 @@ form{
 #buscar {
     margin-left: 3px;
 }
+
+.message li {
+    color: white;
+}
+
+.message li.yellow{
+    color: yellow;
+}
+
+.message li.red {
+    color: red;
+}
+
 
