--- a/TCC-EngenhariaComputacao-Totem/src/templates/form-cpf.html
+++ b/TCC-EngenhariaComputacao-Totem/src/templates/form-cpf.html
@@ -11,15 +11,36 @@
 <body>
 
     <body>
+<div class="container-message {% if messages %}with-messages{% endif %}">
+    <div class="message-box">
+        <p class="waiting-message">Aguardando Solicitação</p>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
-                <ul class="flashes">
+                <ul class="message">
                     {% for message in messages %}
-                        <li>{{ message }}</li>
+                        <li class="{% if 'PACIENTE ENCONTRADO MAS NÃO POSSUI AGENDAMENTO' in message or 'PACIENTE ENCONTRADO MAS NÃO RECONHECIDO' in message %}yellow{% elif 'PACIENTE NÃO ENCONTRADO' in message %}red{% else %}default{% endif %}">
+                            {{ message }}
+                        </li>
                     {% endfor %}
                 </ul>
+                <script>
+                    document.querySelector('.message-box .waiting-message').style.display = 'none';
+                </script>
             {% endif %}
         {% endwith %}
+    </div>
+</div>
+        <style>
+            h1{
+                color:aliceblue;
+                font-size: 70px
+            }
+            .btn {
+            width: 300px;
+            font-size: 36px;
+            padding: 20px 40px;
+        }
+        </style>
 
 
     <h1>Digite seu CPF</h1>
@@ -39,7 +60,7 @@
         function formatarCPF(campo) {
             // Remove caracteres não numéricos
             var cpfAtual = campo.value.replace(/[^\d]/g, '');
-    
+
             // Adiciona os pontos e traço conforme o formato do CPF
             if (cpfAtual.length > 3 && cpfAtual.length <= 6) {
                 campo.value = cpfAtual.substring(0, 3) + '.' + cpfAtual.substring(3);
@@ -52,8 +73,13 @@
             }
         }
     </script>
-    
+
+    <footer class="footer-cpf">
+    <div class="texto-rodape">
+        <p>© Copyright, AGP LAB</p>
+    </div>
+</footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-</html>
