--- a/TCC-EngenhariaComputacao-Totem/src/templates/home.html
+++ b/TCC-EngenhariaComputacao-Totem/src/templates/home.html
@@ -3,11 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Caminho relativo usando Flask -->
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Totem</title>
+
+    <style>
+        h1 {
+            color: aliceblue;
+            font-size: 70px;
+        }
+
+        .btn {
+            font-size: 36px;
+            padding: 20px 40px;
+        }
+
+        .notification-box {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #f2f2f2;
+            border: 1px solid #ccc;
+            padding: 15px;
+            border-radius: 8px;
+            display: none;
+        }
+
+        .notification-content {
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
 
@@ -17,6 +43,28 @@
         <a href="/buscar-usuario-cpf" class="btn btn-primary">Não</a>
     </div>
 
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <div class="notification-box">
+        <div class="notification-content">
+            <p>Horário de Funcionamento: Segunda a Domingo: das 06:00 as 22:00.</p>
+            <p>Instruções: Siga as orientações no totem para realizar o reconhecimento fácial.</p>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const notificationBox = document.querySelector('.notification-box');
+            notificationBox.style.display = 'block';
+        });
+    </script>
+
 </body>
+
+<footer class="footer">
+    <div class="texto-rodape">
+        <p>© Copyright, AGP LAB</p>
+    </div>
+</footer>
+
 </html>
