--- a/TCC-EngenhariaComputacao-Totem/src/templates/reconhecimento.html
+++ b/TCC-EngenhariaComputacao-Totem/src/templates/reconhecimento.html
@@ -12,7 +12,7 @@
 <body>
 {% with messages = get_flashed_messages() %}
             {% if messages %}
-                <ul class="flashes">
+                <ul class="flashes-reconhecido">
                     {% for message in messages %}
                         <li>{{ message }}</li>
                     {% endfor %}
@@ -34,4 +34,9 @@
     </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+<footer class="footer-reconhecimento">
+    <div class="texto-rodape">
+        <p>© Copyright, AGP LAB</p>
+    </div>
+</footer>
 </html>
